Fix usage of Java 9 feature